--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <style>
-
+      	iframe{
+      		margin-left: 30%;
+      	}
+      	button{
+      		outline: none; 
+      	}
       	body{
       		margin:0;
       	}
@@ -25,13 +30,13 @@
       	}
       	.side-bar-content{
       		width:100%;
-      		text-align: left;
-      		padding: 10px;
+      		text-align: center;
+      		font-size:135%;
+      		padding: 20px;
       		border:0;
       		background-color:rgb(235,235,235);
       		cursor:pointer; 
       		transition: 0.4s;
-      		font-size:110%;
       	}
       	.side-bar-content:hover{
       		color:#f15145;
@@ -88,14 +93,15 @@
       		margin-left:5%;
       		text-align:left;
       		padding:10px;
+      		padding-bottom: 20px;
       		padding-left:20px;
-      		font-size:17px;
+      		font-size:20px;
       		transition: 0.4s;
       		font-weight: bold;
       		display: flex;
-      	}
-      	.ac{
-      		width:50%;
+      		display: flex;
+      		flex-direction: column;
+      		justify-content: space-between;
       	}
       	.panel{
       		display:none;
@@ -106,11 +112,11 @@
       		justify-content: space-between;
       	}
       	.n{
-      		margin-top:39.4px;
-      		line-height: 25px;
+      		height: auto;
       	}
       	.ac-info{
-      		color:#a9a9b2;
+      		color:#7a7a7a;
+      		width: 50%;
       	}
 
 
@@ -168,7 +174,7 @@ img {vertical-align: middle;}
   font-size: 20px;
   padding: 8px 12px;
   position: absolute;
-
+  background-color:#f15145;
 }
 
 /* The dots/bullets/indicators */
@@ -205,7 +211,15 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-
+.c{
+	margin-left:5%;
+	width:90%;
+	margin-top:30px;
+	font-size:120%;
+}
+.m{
+	font-size:140%;
+}
       </style>
 
 
@@ -265,18 +279,26 @@ function side_open(){
 	document.getElementById("header").style.width = "75%";
 }
 </script>
+<script>
+	function percent(n){
+		document.getElementById("text"+n).scrollIntoView(top);
+		
+		window.scrollBy(0,-70);
+		if(n==4){window.scrollBy(0,70);}
+	}
 
+</script>
 
 </head>
 <body>
 
 
 <div id="side-bar" class="side-bar w3-animate-left">
-	<button class="side-bar-content" style="padding:20px;font-size: 125%;" onclick="side_close()">Содержание</button>
-	<button class="side-bar-content">Биография</button>
-	<button class="side-bar-content">Учёба</button>
-	<button class="side-bar-content">Научные труды</button>
-	<button class="side-bar-content">Фильм</button>
+	<button class="side-bar-content" style="padding:20px;font-size: 170%;font-weight: bold;" onclick="side_close()">Содержание</button>
+	<button onclick ="percent(1)" class="side-bar-content">Биография</button>
+	<button onclick ="percent(2)" class="side-bar-content">Достижения и награды</button>
+	<button onclick ="percent(3)" class="side-bar-content">Научные труды</button>
+	<button onclick ="percent(4)" class="side-bar-content">Фильм</button>
 </div>
 
 
@@ -295,18 +317,26 @@ function side_open(){
   <div class="slideshow-container">
 
 <div class="mySlides fade" style="display:block;">
-  <div class="numbertext">1 / 3</div>
+  <div class="numbertext">1 / 5</div>
   <img src="y1.jpg" style="width:100%; height:350px;">
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+  <div class="numbertext">2 / 5</div>
   <img src="y2.jpg" style="width:100%; height:350px;">
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
+  <div class="numbertext">3 / 5</div>
   <img src="y3.jpg" style="width:100%; height:350px;">
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">4 / 5</div>
+  <img src="y4.jpg" style="width:100%; height:350px;">
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">5 / 5</div>
+  <img src="y5.jpg" style="width:100%; height:350px;">
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -315,6 +345,8 @@ function side_open(){
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span> 
+  <span class="dot" onclick="currentSlide(5)"></span> 
 </div>
 </div>
 
@@ -323,91 +355,53 @@ function side_open(){
 
 
   <div class="accordion">
-<div class="ac">
-  	<div class="ac-info n">Карьера</div>
-  	
-  	<div class="ac-info n">Дата рождения</div>
-  	
-  	<div class="ac-info n">Место рождения</div>
-  	
-  	<div class="ac-info n">Учёная степень</div>
-  	
-</div>
 
-<div class="ac">
-	<div class="ac-content n">Ученый</div>
+  	<div style="display: flex;"><div class="ac-info n">Карьера</div><div class="ac-content n">Ученый, генерал</div></div>
 
-	<div class="ac-content n">17 июля, 1934</div>
+  	<div style="display: flex;"><div class="ac-info n">Дата рождения</div><div class="ac-content n">17 июля, 1934</div></div>
+  	
+  	<div style="display: flex;"><div class="ac-info n">Место рождения</div><div class="ac-content n">Казань, СССР</div></div>
+  	
+  	<div style="display: flex;"><div class="ac-info n">Учёная степень</div><div class="ac-content n">Доктор технических наук</div></div>
 
-	<div class="ac-content n">Казань, СССР</div>
 
-	<div class="ac-content n">Доктор технических наук</div>
-</div>
   </div>
 
 </div>
 
+<h2 id="text1" class="c m">Биография</h2>
 
-Чистая вода – это наш самый драгоценный ресурс,
- однако каждый день мы сбрасываем в мировые реки, озера и потоки около двух миллионов тонн отходов.
-  Это не только оказывает плохое влияние на животных и растений, которые живут в них, но также делает людей больными,
-   когда грязные потоки плывут в океаны, в которых мы плаваем!
+<div class="c">Юсупов Рафаэль Мидхатович родился 17 июля 1934 года в г.Казани. Его детство было нелегким, он рано остался без отца. Отец Р.М.Юсупова, Мидхат Мустафеевич, в июне 1942 года погиб в Великой Отечественной войне под Москвой. Его мать осталась одна с двумя детьми – восьмилетним сыном Рафаэлем и трехлетней дочерью Эльмирой.</div>
+<div class="c">После окончания в 1952 году с золотой медалью Казанской спецшколы ВВС Р.М.Юсупов был направлен в Ленинградскую военно-воздушную инженерную академию (ныне Военно-космическая академия (ВКА) имени А.Ф.Можайского), которую окончил с отличием в 1958 году по специальности инженер-электрик. После окончания в 1952 году с золотой медалью Казанской спецшколы ВВС Р.М.Юсупов был направлен в Ленинградскую военно-воздушную инженерную академию (ныне Военно-космическая академия (ВКА) имени А.Ф.Можайского), которую окончил с отличием в 1958 году по специальности инженер-электрик. В 1964 году он окончил математико-механический факультет Ленинградского государственного университета по специальности математик. </div>
+<div class="c">В 1958-1985 годах Р.М.Юсупов проходил службу в Военной академии имени А.Ф.Можайского (ВА имени А.Ф.Можайского), где занимал должности инженера (1958—1959), старшего инженера (1959), научного сотрудника (1959—1960), адъюнкта (1960—1962), старшего научного сотрудника (1962—1967), начальника научно-исследовательской лаборатории систем управления летательных аппаратов (1967—1970), заместителя начальника кафедры автономных систем управления ракет и космических аппаратов (1970—1971), начальника кафедры военной кибернетики и боевой эффективности применения ракетно-космической техники (1971—1976), начальника созданного с его участием, уникального в системе высшего военного образования, факультета сбора и обработки информации (1976-1985). В 1958-1985 годах Р.М.Юсупов проходил службу в Военной академии имени А.Ф.Можайского (ВА имени А.Ф.Можайского), где занимал должности инженера (1958—1959), старшего инженера (1959), научного сотрудника (1959—1960), адъюнкта (1960—1962), старшего научного сотрудника (1962—1967), начальника научно-исследовательской лаборатории систем управления летательных аппаратов (1967—1970), заместителя начальника кафедры автономных систем управления ракет и космических аппаратов (1970—1971), начальника кафедры военной кибернетики и боевой эффективности применения ракетно-космической техники (1971—1976), начальника созданного с его участием, уникального в системе высшего военного образования, факультета сбора и обработки информации (1976-1985). В 1985 году Р.М.Юсупов назначается на должность начальника Направления моделирования стратегических операций Центра оперативно-стратегических исследований Генерального Штаба ВС СССР, которую исполнял по 1986 год. В этом же году он был переведен на должность начальника кафедры оперативно-тактической подготовки ВА имени А.Ф. Можайского.  </div>
 
-Есть несколько вещей, которые мы можем сделать, чтобы восстановить наши нездоровые водные артерии в здоровое состояние. Прежде всего, следите за тем, чтобы вы никогда не выбрасывали в канализацию или на землю что-то, что может быть токсичным. Затем следите за тем, чтобы в сточные каналы не попадал мусор, срезанная трава или листья, поскольку они могут в конце концов нанести вред водным существам. Еще убирайте за своей собакой!
-Еще одним способом снизить загрязнение воды – это снизить сток избыточной воды. Вы можете сделать это, убедившись, что ваш разбрызгиватель орошает только ваш сад, а не еще и дорожки! Вы можете попробовать подметать дорожки, а не смывать с них грязь из шланга, а также мыть машину, используя ведро с водой, а не шланг. Еще лучше, отвезите ее в автомойку, так как они знают, как надо расходовать воду.
+<h2 id="text2" class="c m">Достижения и награды</h2>
 
-Finally, try to use products that aren’t harmful to the environment, such as compost instead of chemical fertilisers.
+<div class="c">
+	За заслуги в период военной службы Р.М.Юсупов награжден орденом «Красной звезды» (1978) и тринадцатью медалями, ему присвоено воинское звание генерал-майор (1980). За заслуги в период военной службы Р.М.Юсупов награжден орденом «Красной звезды» (1978) и тринадцатью медалями, ему присвоено воинское звание генерал-майор (1980). За научные достижения и педагогические заслуги он награжден орденом «Почета» (1999) и орденом «За заслуги перед отечеством» IV степени (2005), знаком отличия «За заслуги перед Санкт-Петербургом» (2009). Ему присвоено почетное звание «Заслуженный деятель науки и техники РФ» (1984), «Почетный радист СССР» (1974), ученое звание профессора (1974) и присуждена ученая степень доктора технических наук (1968). Он является лауреатом Первой премии Министерства высшего и среднего специального образования СССР за лучшую научную работу (1983), лауреатом премии Правительства Санкт-Петербурга имени А.С.Попова в области электро- и радиотехники, электроники и информационных технологий (2009), лауреатом премии Правительства Санкт-Петербурга за выдающиеся достижения в области высшего и среднего профессионального образования (2009). 
+</div>
+<div class="c">
+	Р.М. ЮСУПОВ – генерал, ученый, общественный деятель Р.М.Юсупов является членом-корреспондентом Российской академии наук по Отделению нанотехнологий и информационных технологий, избран почетным академиком Академии наук республики Татарстан, является почетным профессором Академии космических войск им.А.Ф.Можайского. Р.М.Юсупов – выдающийся ученый в области информатики и теории управления, основатель и руководитель научных школ по теории чувствительности информационно-управляющих систем и научно-методологическим основам информатизации общества. За достижения в области педагогики и просветительства Р.М. Юсупов награжден Международной премией имени Николая Рериха. Р.М.Юсупов является автором более 350 научных трудов, в том числе 20 монографий и 17 изобретений. Им подготовлено 13 докторов наук и 45 кандидатов наук, среди его учеников руководители научных организаций и фирм. 
+</div>
 
-И наконец, старайтесь использовать вещи, которые не вредны для окружающей среды, такие как компост вместо химических удобрений.
+<h2 id="text3" class="c m">Научные труды</h2>
 
-Basically, remember that anything that gets onto the ground can eventually end up in a river, lake or stream! So, make sure you do not allow any chemicals or waste to go on the ground or down the drain.
+<div class="c">
+	<div style="font-weight: bold;">Теория чувствительности</div> В 1958–1976 годах Р.М.Юсупов проводил исследования в области теории управления полетом летательных аппаратов, теории самонастраивающихся (адаптивных) систем, теории идентификации и теории чувствительности динамических систем. Он является одним из основоположников отечественной научной школы по теории чувствительности. 
+</div>
+<div class="c">
+	<div style="font-weight: bold;">Автоматическое управление</div> Благодаря работам P.M. Юсупова, его коллег и учеников теория чувствительности вошла в число основных раз­делов общего курса теории автоматического управления. Анализ чувствительности стал обязательным этапом создания систем уп­равления и их элементов. Научные результаты P.M. Юсупова в указанных областях используются при проектировании, настройке и испытаниях высокоточных приборов и систем. 
+</div>
+<div class="c">
+	<div style="font-weight: bold;">Самонастраивающиеся системы</div> Кандидатская диссертация Р.М.Юсупова (1963 г.) была посвящена разработке и исследованию самонастраивающейся системы с эталонной моделью в системе управления самолетом с бортовой вычислительной машиной. Его докторская диссертация (1968 г.) связана с развитием и применением теории чувствительности для анализа и синтеза систем управления ракет и космических аппаратов в условиях параметрической неопределенности.  
+</div>
 
-И, самое основное, помните, что все, что попадает на землю, может в конце концов оказаться в реке, озере и потоке! Так что следите за тем, чтобы не позволять каким-либо химикатам или отходам попадать на землю или в канализацию.
-Чистая вода – это наш самый драгоценный ресурс,
- однако каждый день мы сбрасываем в мировые реки, озера и потоки около двух миллионов тонн отходов.
-  Это не только оказывает плохое влияние на животных и растений, которые живут в них, но также делает людей больными,
-   когда грязные потоки плывут в океаны, в которых мы плаваем!
+<div class="c">
+	<div style="font-weight: bold;">Кибернетика и научное моделирование</div> С 1976 года научные интересы P.M. Юсупова связаны с проблемами сбора и обработки информации, геофизической кибернетики (теория управления геофизическими процессами), математического моделирования, информатизации, телемедицины, информационной безопасности. 
+</div>
 
-Есть несколько вещей, которые мы можем сделать, чтобы восстановить наши нездоровые водные артерии в здоровое состояние. Прежде всего, следите за тем, чтобы вы никогда не выбрасывали в канализацию или на землю что-то, что может быть токсичным. Затем следите за тем, чтобы в сточные каналы не попадал мусор, срезанная трава или листья, поскольку они могут в конце концов нанести вред водным существам. Еще убирайте за своей собакой!
-Еще одним способом снизить загрязнение воды – это снизить сток избыточной воды. Вы можете сделать это, убедившись, что ваш разбрызгиватель орошает только ваш сад, а не еще и дорожки! Вы можете попробовать подметать дорожки, а не смывать с них грязь из шланга, а также мыть машину, используя ведро с водой, а не шланг. Еще лучше, отвезите ее в автомойку, так как они знают, как надо расходовать воду.
-
-Finally, try to use products that aren’t harmful to the environment, such as compost instead of chemical fertilisers.
-
-И наконец, старайтесь использовать вещи, которые не вредны для окружающей среды, такие как компост вместо химических удобрений.
-
-Basically, remember that anything that gets onto the ground can eventually end up in a river, lake or stream! So, make sure you do not allow any chemicals or waste to go on the ground or down the drain.
-
-И, самое основное, помните, что все, что попадает на землю, может в конце концов оказаться в реке, озере и потоке! Так что следите за тем, чтобы не позволять каким-либо химикатам или отходам попадать на землю или в канализацию.
-Чистая вода – это наш самый драгоценный ресурс,
- однако каждый день мы сбрасываем в мировые реки, озера и потоки около двух миллионов тонн отходов.
-  Это не только оказывает плохое влияние на животных и растений, которые живут в них, но также делает людей больными,
-   когда грязные потоки плывут в океаны, в которых мы плаваем!
-
-Есть несколько вещей, которые мы можем сделать, чтобы восстановить наши нездоровые водные артерии в здоровое состояние. Прежде всего, следите за тем, чтобы вы никогда не выбрасывали в канализацию или на землю что-то, что может быть токсичным. Затем следите за тем, чтобы в сточные каналы не попадал мусор, срезанная трава или листья, поскольку они могут в конце концов нанести вред водным существам. Еще убирайте за своей собакой!
-Еще одним способом снизить загрязнение воды – это снизить сток избыточной воды. Вы можете сделать это, убедившись, что ваш разбрызгиватель орошает только ваш сад, а не еще и дорожки! Вы можете попробовать подметать дорожки, а не смывать с них грязь из шланга, а также мыть машину, используя ведро с водой, а не шланг. Еще лучше, отвезите ее в автомойку, так как они знают, как надо расходовать воду.
-
-Finally, try to use products that aren’t harmful to the environment, such as compost instead of chemical fertilisers.
-
-И наконец, старайтесь использовать вещи, которые не вредны для окружающей среды, такие как компост вместо химических удобрений.
-
-Basically, remember that anything that gets onto the ground can eventually end up in a river, lake or stream! So, make sure you do not allow any chemicals or waste to go on the ground or down the drain.
-
-И, самое основное, помните, что все, что попадает на землю, может в конце концов оказаться в реке, озере и потоке! Так что следите за тем, чтобы не позволять каким-либо химикатам или отходам попадать на землю или в канализацию.
-Чистая вода – это наш самый драгоценный ресурс,
- однако каждый день мы сбрасываем в мировые реки, озера и потоки около двух миллионов тонн отходов.
-  Это не только оказывает плохое влияние на животных и растений, которые живут в них, но также делает людей больными,
-   когда грязные потоки плывут в океаны, в которых мы плаваем!
-
-Есть несколько вещей, которые мы можем сделать, чтобы восстановить наши нездоровые водные артерии в здоровое состояние. Прежде всего, следите за тем, чтобы вы никогда не выбрасывали в канализацию или на землю что-то, что может быть токсичным. Затем следите за тем, чтобы в сточные каналы не попадал мусор, срезанная трава или листья, поскольку они могут в конце концов нанести вред водным существам. Еще убирайте за своей собакой!
-Еще одним способом снизить загрязнение воды – это снизить сток избыточной воды. Вы можете сделать это, убедившись, что ваш разбрызгиватель орошает только ваш сад, а не еще и дорожки! Вы можете попробовать подметать дорожки, а не смывать с них грязь из шланга, а также мыть машину, используя ведро с водой, а не шланг. Еще лучше, отвезите ее в автомойку, так как они знают, как надо расходовать воду.
-
-Finally, try to use products that aren’t harmful to the environment, such as compost instead of chemical fertilisers.
-
-И наконец, старайтесь использовать вещи, которые не вредны для окружающей среды, такие как компост вместо химических удобрений.
-
-Basically, remember that anything that gets onto the ground can eventually end up in a river, lake or stream! So, make sure you do not allow any chemicals or waste to go on the ground or down the drain.
-
-И, самое основное, помните, что все, что попадает на землю, может в конце концов оказаться в реке, озере и потоке! Так что следите за тем, чтобы не позволять каким-либо химикатам или отходам попадать на землю или в канализацию.
+<h2 id="text4" class="c m">Фильм</h2>
+	<iframe width="560" height="315" src="video1.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
